2010-05-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/carriers/xmlrpc_carrier/XmlRpcCarrier.h: basic XML/RPC
	carrier.  Experimental, but already sufficient to interoperate
	with the XmlRpc++ library's "Hello" server and client.  Not
	intended for high bandwidth uses.  Carrier name is "xmlrpc".
	XML structures are converted to Bottle-compatible form.
	Here's a quick test against ROS, which uses XML/RPC for some 
	APIs. Assumes roscore and "talker.cpp" tutorial example running:
	  yarp name register /roscore tcp localhost 11311
	  echo "lookupNode dummy_id /talker" | yarp rpc xmlrpc://roscore
            >> prints: 1 "node api" "http://contact:37291/"
	  yarp name register /talker tcp localhost 37291
	  echo "requestTopic dummy_id /chatter ((TCPROS))" | yarp rpc xmlrpc://talker
	    >> prints: 1 "" (TCPROS contact 38265)
	  yarp name register /talker/chatter tcp localhost 38265
	At that point we stop since port number 38265 talks the TCPROS 
	protocol, rather than XMLRPC.
	
	* src/libYARP_OS/include/yarp/os/Event.h: add wrapper
	for ACE_Event class.

2010-05-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortWriterBuffer.cpp: correct counting
	mistake when recycling unwritten objects.  Thanks Ugo!

2010-05-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/BufferedPort.h: added
	unprepare method for situation where an object is prepared
	for writing, and then user decides not to write after all.
	Also improved default behavior in this case.

2010-05-17 Daniel Krieg  <krieg@fias.uni-frankfurt.de>

    * src/carriers/mpi_carrier/src/MpiStream.cpp: fixed thread
    problem -> now requesting MPI_THREAD_MULTIPLE level. Regarding
    OpenMPI faq thread support not intensively tested; I would recommend
    MPICH2 as mpi implementation.
    Preventing Mpi now from busy polling via non-blocking communcation.

2010-05-16  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
